# intro-2-langchain

./: README.md  main.py  ollama_demo.ipynb  pyproject.toml
lesson1/: 1.2_prompting.ipynb
module1/: 1.1_foundational_models.ipynb  1.2_tools.ipynb  1.3_memory.ipynb  1.4_multimodel.ipynb  1.5_personal_chef.ipynb  1.5_personal_chef.py  langgraph.json
module2/: 2.1_mcp.ipynb  2.1_travel_agent.ipynb  2.2_runtime_context.ipynb  2.2_state.ipynb  2.3_multi_agent.ipynb  2.4_wdding_planner.ipynb
module2/resources/: 2.1_mcp_server.py
module3/: 3.2_managing_messages.ipynb  3.3_hitl.ipynb  3.4_notes.ipynb
