[project]
name = "intro-2-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.12.0",
    "fastmcp>=3.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.4",
    "langgraph-cli[inmem]>=0.4.19",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
